@@ -27,7 +27,6 @@ import java.util.List;
 import java.util.Map;
 import java.util.Map.Entry;
 import java.util.concurrent.ConcurrentHashMap;
-import java.util.stream.Collectors;
 
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
@@ -157,6 +156,7 @@ public class CampaignEndpoint extends Endpoint {
         }
     }
 
+    @Override
     @OnError
     public void onError(Session session, Throwable t) {
         logger.warn(t.getMessage());
@@ -218,10 +218,7 @@ public class CampaignEndpoint extends Endpoint {
 
         //first add finished and inReview pages
         Map<Integer, String> statusMap = getPageStatus(campaignId, recordIdentifier);
-        statusMap.entrySet().forEach(entry -> {
-            json.put(Integer.toString(entry.getKey()), entry.getValue());
-        });
-
+        statusMap.entrySet().forEach(entry -> json.put(Integer.toString(entry.getKey()), entry.getValue()));
         pageLocks.entrySet()
                 .stream()
                 .filter(entry -> !entry.getKey().equals(httpSessionId))
@@ -260,7 +257,7 @@ public class CampaignEndpoint extends Endpoint {
                 .filter(entry -> !entry.getKey().equals(httpSessionId))
                 .map(Entry::getValue)
                 .map(lock -> lock.pageNumber)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     /**
